--- a/aliyun_oss_bucket/package.json
+++ b/aliyun_oss_bucket/package.json
@@ -22,7 +22,7 @@
     "start": "npm run watch",
     "watch": "tsc -w",
     "format": "prettier --write src/",
-    "prebuild": "rimraf dist && npm run format && rimraf node_modules && npm i",
+    "prebuild": "rimraf dist && npm run format && rimraf node_modules && rimraf package-lock.json && npm i",
     "build": "esbuild src/index.ts --bundle --log-level=error --minify --platform=node --format=cjs --target=node10.4 --outfile=dist/index.js"
   },
   "dependencies": {
