--- a/ros_transformer/examples/s2.yaml
+++ b/ros_transformer/examples/s2.yaml
@@ -3,33 +3,22 @@ name: rosApp #  项目名称
 access: xiliu #  秘钥别名
 
 services:
-  xl-test-bucket-001:
-    component: aliyun_oss_bucket@dev
-    props:
-      bucket: xl-test-bucket-001
-      acl: private
-
-  xl-test-bucket-003:
-    component: aliyun_oss_bucket@dev
-    props:
-      bucket: xl-test-bucket-003
-      acl: private
-  
-  xl-test-instance-002:
-    component: aliyun_ots_instance@dev
-    props:
-      name: xl-inst-321
-      accessed_by: Any
-      description: "xiliu test instance"
-      instance_type: Capacity
-
-  ros-transformer-test: #  服务名称
+  ros-test: #  服务名称
     component: ${path(../)}
     props:
       region: cn-hangzhou
       name: xl-stack-transformer
       endpoint: ros.aliyuncs.com # 海外是 ros-intl.aliyuncs.com， 默认是国内
       ref:
-        - ${xl-test-bucket-001.output}
-        - ${xl-test-bucket-003.output}
-        - ${xl-test-instance-002.output}
+        - resourceTemplate:
+            Type: ALIYUN::OSS::Bucket
+            Properties:
+              BucketName: xl-test-bucket-001
+              AccessControl: private
+          resourceId: xl-test-bucket-001
+        - resourceTemplate:
+            Type: ALIYUN::OSS::Bucket
+            Properties:
+              BucketName: xl-test-bucket-002
+              AccessControl: private
+          resourceId: xl-test-bucket-002
