--- a/aliyun_ots_table/publish.yaml
+++ b/aliyun_ots_table/publish.yaml
@@ -1,5 +1,5 @@
 Type: Component
-Name: ros_transformer
+Name: aliyun_ots_table
 Provider:
   - 阿里云 # 取值内容参考：www.devsapp.cn/provider_list.html
 Version: dev
@@ -14,41 +14,37 @@ Service: # 使用的服务
     Authorities: #权限描述
       - 资源编排全部权限 # 所需要的权限
 Commands: # 指令，格式为指令：指令描述，例如：
-  deploy: 根据 input 参数转为 ros 组件部署
-  remove: 根据 stack name 参数 remove ros stack 资源
+  deploy: 根据 ROS ots instance 获取对应的参数
+  remove: 空命令
+
 Properties:
-  region:
+  instance_name:
     type: string
     required: true
-    description: 地域
-    default: cn-hangzhou
-    enum:
-      - cn-beijing
-      - cn-hangzhou
-      - cn-shanghai
-      - cn-qingdao
-      - cn-zhangjiakou
-      - cn-huhehaote
-      - cn-shenzhen
-      - cn-chengdu
-      - cn-hongkong
-      - ap-southeast-1
-      - ap-southeast-2
-      - ap-southeast-3
-      - ap-southeast-5
-      - ap-northeast-1
-      - eu-central-1
-      - eu-west-1
-      - us-west-1
-      - us-east-1
-      - ap-south-1
+    description: table Name
 
-  name:
+  table_name:
     type: string
     required: true
-    description: Stack Name
+    description: table Name
 
-  ref:
+  primary_key:
     type: object
+    required: true
+    description: table 主键
+
+  time_to_live:
+    type: integer
     required: false
-    description: 引入的 ros 资源数组
+    default: -1
+
+  max_version:
+    type: integer
+    required: false
+    default: 1
+
+  deviation_cell_version_in_sec:
+    type: integer
+    required: false
+    default: 86400
+
