--- a/ros_transformer/examples/s.yaml
+++ b/ros_transformer/examples/s.yaml
@@ -3,22 +3,48 @@ name: rosApp #  项目名称
 access: xiliu #  秘钥别名
 
 services:
-  ros-test: #  服务名称
+  xl-test-bucket-001:
+    component: aliyun_oss_bucket@dev
+    props:
+      bucket: xl-test-bucket-001
+      acl: private
+
+  xl-test-bucket-003:
+    component: aliyun_oss_bucket@dev
+    props:
+      bucket: xl-test-bucket-003
+      acl: private
+  
+  xl-test-instance-002:
+    component: aliyun_ots_instance@dev
+    props:
+      name: xl-inst-321
+      accessed_by: Any
+      description: "xiliu test instance"
+      instance_type: Capacity
+
+  xl-test-table-001:
+    component: aliyun_ots_table@dev
+    props:
+      depends_on: 
+        - xl-test-instance-002
+      instance_name: ${xl-test-instance-002.props.name}
+      table_name: app_table
+      primary_key:
+        - type: String
+          name: id
+      time_to_live: -1
+      max_version: 1
+      deviation_cell_version_in_sec: 86400
+
+  ros-transformer-test: #  服务名称
     component: ${path(../)}
     props:
       region: cn-hangzhou
       name: xl-stack-transformer
       endpoint: ros.aliyuncs.com # 海外是 ros-intl.aliyuncs.com， 默认是国内
       ref:
-        - resourceTemplate:
-            Type: ALIYUN::OSS::Bucket
-            Properties:
-              BucketName: xl-test-bucket-001
-              AccessControl: private
-          resourceId: xl-test-bucket-001
-        - resourceTemplate:
-            Type: ALIYUN::OSS::Bucket
-            Properties:
-              BucketName: xl-test-bucket-002
-              AccessControl: private
-          resourceId: xl-test-bucket-002
+        - ${xl-test-bucket-001.output}
+        - ${xl-test-bucket-003.output}
+        - ${xl-test-instance-002.output}
+        - ${xl-test-table-001.output}
