--- a/aliyun_oss_bucket/package.json
+++ b/aliyun_oss_bucket/package.json
@@ -25,10 +25,7 @@
     "prebuild": "rimraf dist && npm run format && rimraf node_modules && rimraf package-lock.json && npm i",
     "build": "esbuild src/index.ts --bundle --log-level=error --minify --platform=node --format=cjs --target=node10.4 --outfile=dist/index.js"
   },
-  "dependencies": {
-    "string-random": "0.1.3",
-    "uuid": "^9.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^14.0.23",
     "esbuild": "^0.13.8",
