--- a/ros_transformer/examples/s2.yaml
+++ b/ros_transformer/examples/s2.yaml
@@ -1,24 +1,24 @@
-edition: 1.0.0 #  命令行YAML规范版本，遵循语义化版本（Semantic Versioning）规范
+edition: 3.0.0 #  命令行YAML规范版本，遵循语义化版本（Semantic Versioning）规范
 name: rosApp #  项目名称
 access: xiliu #  秘钥别名
 
-services:
+resources:
   ros-test: #  服务名称
-    component: ${path(../)}
+    component: ${path("../")}
     props:
       region: cn-hangzhou
-      name: xl-stack-transformer
+      name: xl-stack-transformer2
       endpoint: ros.aliyuncs.com # 海外是 ros-intl.aliyuncs.com， 默认是国内
-      ref:
+      refs:
         - resourceTemplate:
             Type: ALIYUN::OSS::Bucket
             Properties:
-              BucketName: xl-test-bucket-001
+              BucketName: xl-bucket-0001
               AccessControl: private
-          resourceId: xl-test-bucket-001
+          resourceId: xl-bucket-0001
         - resourceTemplate:
             Type: ALIYUN::OSS::Bucket
             Properties:
-              BucketName: xl-test-bucket-002
+              BucketName: xl-bucket-0002
               AccessControl: private
-          resourceId: xl-test-bucket-002
+          resourceId: xl-bucket-0002
