--- a/aliyun_oss_bucket/examples/s.yaml
+++ b/aliyun_oss_bucket/examples/s.yaml
@@ -1,10 +1,10 @@
-edition: 2.0.0 
+edition: 3.0.0 
 name: rosApp 
 access: xiliu 
 
-services:
+resources:
   xl-bucket: 
-    component: ${path(../)}
+    component: ${path("../")}
     props:
       bucket: xl-test-bucket
       acl: private
