--- a/aliyun_sls_logstore/examples/s.yaml
+++ b/aliyun_sls_logstore/examples/s.yaml
@@ -1,10 +1,10 @@
-edition: 1.0.0 #  命令行YAML规范版本，遵循语义化版本（Semantic Versioning）规范
+edition: 3.0.0 #  命令行YAML规范版本，遵循语义化版本（Semantic Versioning）规范
 name: rosApp #  项目名称
 access: xiliu #  秘钥别名
 
-services:
+resources:
   ros-test: #  服务名称
-    component: ${path(../)}
+    component: ${path("../")}
     props:
       project: xl-test-project
       name: xl-test-logs
