--- a/ros_transformer/examples/s.yaml
+++ b/ros_transformer/examples/s.yaml
@@ -1,21 +1,21 @@
-edition: 1.0.0 #  命令行YAML规范版本，遵循语义化版本（Semantic Versioning）规范
+edition: 3.0.0 #  命令行YAML规范版本，遵循语义化版本（Semantic Versioning）规范
 name: rosApp #  项目名称
 access: xiliu #  秘钥别名
 
-services:
-  xl-test-bucket-001:
+resources:
+  xl_test_bucket_001:
     component: aliyun_oss_bucket@dev
     props:
       bucket: xl-test-bucket-001
       acl: private
 
-  xl-test-bucket-003:
+  xl_test_bucket_003:
     component: aliyun_oss_bucket@dev
     props:
       bucket: xl-test-bucket-003
       acl: private
   
-  xl-test-instance-002:
+  xl_test_instance_002:
     component: aliyun_ots_instance@dev
     props:
       name: xl-inst-321
@@ -23,12 +23,12 @@ services:
       description: "xiliu test instance"
       instance_type: Capacity
 
-  xl-test-table-001:
+  xl_test_table_001:
     component: aliyun_ots_table@dev
     props:
       depends_on: 
-        - xl-test-instance-002
-      instance_name: ${xl-test-instance-002.props.name}
+        - xl_test_instance_002
+      instance_name: ${xl_test_instance_002.props.name}
       table_name: app_table
       primary_key:
         - type: String
@@ -37,17 +37,17 @@ services:
       max_version: 1
       deviation_cell_version_in_sec: 86400
 
-  xl-test-log-project-001: 
+  xl_test_log_project_001: 
     component: aliyun_sls_project@dev
     props:
       name: xl-test-project
       description: "xiliu test log project"
 
-  xl-test-log-store-001: 
+  xl_test_log_store_001: 
     component: aliyun_sls_logstore@dev
     props:
       depends_on: 
-        - xl-test-log-project-001
+        - xl_test_log_project_001
       project: xl-test-project
       name: xl-test-logs
       retention_period: 15
@@ -58,15 +58,15 @@ services:
       append_meta: false
 
   ros-transformer-test: #  服务名称
-    component: ${path(../)}
+    component: ${path("../")}
     props:
       region: cn-hangzhou
-      name: xl-stack-transformer
+      name: xl-stack-transformer1
       endpoint: ros.aliyuncs.com # 海外是 ros-intl.aliyuncs.com， 默认是国内
       refs:
-        - ${xl-test-bucket-001.output}
-        - ${xl-test-bucket-003.output}
-        - ${xl-test-instance-002.output}
-        - ${xl-test-table-001.output}
-        - ${xl-test-log-project-001.output}
-        - ${xl-test-log-store-001.output}
+        - ${xl_test_bucket_001.output}
+        - ${xl_test_bucket_003.output}
+        - ${xl_test_instance_002.output}
+        - ${xl_test_table_001.output}
+        - ${xl_test_log_project_001.output}
+        - ${xl_test_log_store_001.output}
