--- a/ros_transformer/package.json
+++ b/ros_transformer/package.json
@@ -7,7 +7,7 @@
   "author": "Serverless-Devs",
   "contributors": [],
   "license": "MIT",
-  "main": "./dist/index.js",
+  "main": "dist/index.js",
   "publishConfig": {
     "access": "public"
   },
@@ -22,12 +22,12 @@
     "start": "npm run watch",
     "watch": "tsc -w",
     "format": "prettier --write src/",
-    "prebuild": "rimraf dist && npm run format && rimraf node_modules && rimraf package-lock.json && npm i",
+    "prebuild": "rimraf dist && npm run format && rimraf node_modules && npm i && npm link base_aliyun_resource",
     "build": "esbuild src/index.ts --bundle --log-level=error --minify --platform=node --format=cjs --target=node10.4 --outfile=dist/index.js"
   },
   "dependencies": {
-    "@serverless-devs/core": "^0.1.59",
-    "@serverless-devs/load-component": "^0.0.1-beta.1",
+    "@serverless-devs/component-interface": "^0.0.2",
+    "@serverless-devs/load-component": "^0.0.2-beta.3",
     "lodash": "^4.17.21",
     "string-random": "0.1.3",
     "uuid": "^9.0.0"
@@ -35,8 +35,8 @@
   "devDependencies": {
     "@types/node": "^14.0.23",
     "esbuild": "^0.13.8",
-    "rimraf": "^3.0.2",
     "prettier": "^2.8.4",
+    "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
     "typescript": "^4.4.2"
   }
