--- a/aliyun_sls_logstore/package.json
+++ b/aliyun_sls_logstore/package.json
@@ -22,7 +22,7 @@
     "start": "npm run watch",
     "watch": "tsc -w",
     "format": "prettier --write src/",
-    "prebuild": "rimraf dist && npm run format && rimraf node_modules && npm i && npm link base_aliyun_resource",
+    "prebuild": "npm i && rimraf dist && npm run format && rimraf node_modules && npm i && npm link base_aliyun_resource",
     "build": "esbuild src/index.ts --bundle --log-level=error --minify --platform=node --format=cjs --target=node10.4 --outfile=dist/index.js"
   },
   "dependencies": {
