--- a/aliyun_nas_file_system/publish.yaml
+++ b/aliyun_nas_file_system/publish.yaml
@@ -1,21 +1,25 @@
+Edition: 3.0.0
 Type: Component
 Name: aliyun_nas_file_system
 Provider:
-  - 阿里云 # 取值内容参考：www.devsapp.cn/provider_list.html
-Version: dev
+  - 阿里云 # 取值内容参考：https://api.devsapp.cn/v3/common/args.html
+Version: dev.0.1
 Description: 通过阿里云 ROS 部署阿里云资源
 HomePage: https://github.com/devsapp/aliyun-resources/aliyun_nas_file_system
 Tags:
   - ROS
   - IAC
-Category: 基础云服务 # 取值内容参考：www.devsapp.cn/category_list.html
+Category: 基础云服务 # 取值内容参考：https://api.devsapp.cn/v3/common/args.html
 Service: # 使用的服务
-  资源编排: # 取值内容参考：www.devsapp.cn/service_list.html
+  资源编排: # 取值内容参考：https://api.devsapp.cn/v3/common/args.html
     Authorities: #权限描述
       - 资源编排全部权限 # 所需要的权限
 Commands: # 指令，格式为指令：指令描述，例如：
   deploy: 根据 ROS nas filesystem 获取对应的参数
   remove: 空命令
+
+Organization: 阿里云函数计算（FC）
+Effective: Public
 
 Properties:
   file_system_type:
@@ -67,7 +71,6 @@ Properties:
     required: true
     description: 文件系统容量，当 file_system_type 取值为extreme时，该参数有效且必须指定
     default: 100
-
 
   description:
     type: string
