--- a/aliyun_oss_bucket/package.json
+++ b/aliyun_oss_bucket/package.json
@@ -22,7 +22,7 @@
     "start": "npm run watch",
     "test": "jest --config jestconfig.json",
     "watch": "tsc -w",
-    "format": "prettier --write src/",
+    "format": "prettier --write src/ __tests__/",
     "prebuild": "npm i && rimraf dist && npm run format && rimraf node_modules && npm i && npm link base_aliyun_resource",
     "build": "esbuild src/index.ts --bundle --log-level=error --minify --platform=node --format=cjs --target=node10.4 --outfile=dist/index.js"
   },
